test-cases/valid/reject/void_function_parameter.ul
void main() {
    print_stuff();
}

int print_stuff(void v) {
    print (v);
}